# Image-Viewer

./: Cargo.toml  build.rs
.github/workflows/: main.yml
src/: app.rs  duplicate_scanner.rs  duplicate_state.rs  duplicate_types.rs  groups.rs  handlers.rs  image_io.rs  main.rs  notifications.rs  perceptual_scanner.rs  persistence.rs  playlist_grid.rs  playlist_view.rs  preload.rs  scanner.rs  shortcuts.rs  state.rs  thumbnail_provider.rs  win32.rs  workspace.rs
src/adjustments/: contrast.rs  exposure.rs  gamma.rs  highlights.rs  mod.rs  pipeline.rs  saturation.rs  scalar.rs  shadows.rs
src/file_ops/: delete_current.rs  mod.rs
src/platform/: mod.rs  windows_clipboard.rs  windows_drag_out.rs
src/sync/: mod.rs  pan_zoom.rs
src/ui/: adjustment_overlay.rs  bottom_bar.rs  canvas.rs  drag_preview.rs  duplicate_view.rs  filter_popup.rs  floating_toolbar.rs  folder_toolbar.rs  group_assign_prompt.rs  group_tabs.rs  menu_helpers.rs  mod.rs  notification_toast.rs  playlist_grid.rs  settings.rs  sort_controls.rs  split_layout.rs  topbar.rs
src/ui/context_menu/: items.rs  mod.rs
src/ui/dialogs/: confirmation_dialog.rs  delete_file_dialog.rs  mod.rs
src/ui/floating_toolbar/: items.rs  mod.rs
