[package]
name = "image_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
raw-window-handle = "0.6"
image = "0.25.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }