[package]
name = "Image_Viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
raw-window-handle = "0.6"
egui-phosphor = "0.11.0"
lexical-sort = "0.3.1"
image = "0.25.10"
webp = "0.3.1"
zune-jpeg = "0.5.13"
zune-png = "0.5.2"
libavif-image = "0.14"
jxl-oxide = { version = "0.12.5", features = ["image"] }
libheif-rs = "2.7.0"
kamadak-exif = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui = "0.34.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
] }
